[package]
name = "include_img"
version = "0.1.0"
authors = ["Zerthox"]
edition = "2021"
repository = "https://github.com/zerthox/include-img"
description = "Macro to include image pixel data with optional conversion."

[lib]
proc-macro = true

[dependencies]
image = "0.24.5"
proc-macro2 = "1.0.51"
quote = "1.0.23"
strum = { version = "0.24.1", features = ["derive"] }
syn = "1.0.109"

[features]
nightly = []
